--- a/index.html
+++ b/index.html
@@ -274,32 +274,38 @@
                             <div class="iteam">
                                 <div class="skill-prog">
                                     <h6>J-Query</h6>
-                                    <span data-value="100%" style="width:80%;background-color: #2486ffff;"></span>
+                                    <span data-value="100%" style="width:100%;background-color: #2486ffff;"></span>
                                 </div>
 
                             </div>
                             <div class="iteam">
                                 <div class="skill-prog">
                                     <h6>Boostrap</h6>
-                                    <span data-value="100%" style="width:50%;background-color:#800080ff;"></span>
+                                    <span data-value="100%" style="width:100%;background-color:#800080ff;"></span>
                                 </div>
                             </div>
                             <div class="iteam">
                                 <div class="skill-prog">
                                     <h6>Tailwind</h6>
-                                    <span data-value="100%" style="width:55%;background-color:#800080ff;"></span>
+                                    <span data-value="100%" style="width:100%;background-color:#800080ff;"></span>
                                 </div>
                             </div>
                             <div class="iteam">
                                 <div class="skill-prog">
                                     <h6>Java Script</h6>
-                                    <span data-value="90%" style="width:45%;background-color:#ffa600ff;"></span>
+                                    <span data-value="90%" style="width:90%;background-color:#ffa600ff;"></span>
+                                </div>
+                            </div>
+                             <div class="iteam">
+                                <div class="skill-prog">
+                                    <h6>Type Script</h6>
+                                    <span data-value="90%" style="width:95%;background-color:#ffa600ff;"></span>
                                 </div>
                             </div>
                             <div class="iteam">
                                 <div class="skill-prog">
                                     <h6>Node Js</h6>
-                                    <span data-value="100%" style="width:60%;background-color: #2486ffff;"></span>
+                                    <span data-value="100%" style="width:100%;background-color: #2486ffff;"></span>
                                 </div>
 
                                 <div class="button">
@@ -317,7 +323,7 @@
                         <div class="personl-info">
                             <h2>Personal Information</h2>
                             <p>Name :- Harshd Katariya</p>
-                            <p>Age :- 18years</p>
+                            <p>Age :- 19 years</p>
                             <p>Resident :- Surat, Gujarat</p>
                             <p>Address :- 84, Nilkanth Society-1, Katargam, Surat</p>
                             <p>Email :- harshad2043@gmil.com</p>
@@ -365,9 +371,11 @@
                             <li>HTML/CSS/SASS</li>
                             <li>JavaScript</li>
                             <li>J-Query</li>
-                            <li>Node.js</li>
                             <li>Boostrap</li>
                             <li>Tailwind</li>
+                            <li>Node.js</li>
+                            <li>MYSQL</li>
+                            <li>Type-Script</li>
                         </ul>
 
                         <h2>Education</h2>
