--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                         <h2>Personal Information</h2>
                         <p><strong>Name:-</strong> Harshad Katariya</p>
                         <p><strong>DOB:-</strong> 10-03-2006</p>
-                        <p><strong>Age:-</strong> 18years</p>
+                        <p><strong>Age:-</strong> 19 years</p>
                         <p><strong>Email:-</strong> harshad2043@gmail.com</p>
                         <p><strong>Phone:-</strong> 9586392234</p>
 
@@ -384,7 +384,7 @@
                         <h3>Red Adn White Multimedia Education</h3>
                         <p>Master In Back-End Developer(2023-2024)</p>
 
-                        <h2>Project Detail</h2>
+                        <h2>Front-End Project Detail</h2>
                         <br>
                         <p>Electric Admin Penal</p>
                         <ol class="list-style">
