--- a/index.html
+++ b/index.html
@@ -410,6 +410,25 @@
                             <li>Media Query</li>
                         </ol>
 
+                        <h2>Back-End Project Detail</h2>
+                        <br>
+                        <p>Youtube Clone</p>
+                        <ul class="list-style">
+                            <li>Login And Signup</li>
+                            <li>Crete Channel</li>
+                            <li>Upload Video</li>
+                            <li>User Comment In Any Video</li>
+                            <li>Short Video Upload</li>
+                            <li>Watch Later</li>
+                            <li>Serach Video By Title And Description And Channel</li>
+                        </ul>
+                        <p>Box Cricket</p>
+                        <ul class="list-style">
+                            <li>Login And Signup</li>
+                            <li>Add Multiple Box Cricet</li>
+                            <li>Add Multiple Ground In One Box Cricket</li>
+                            <li>Online Booking</li>
+                        </ul>
                         <h2>Additional Info</h2>
                         <p>My Hobby</p>
                         <ol class="list-style">
@@ -560,7 +579,7 @@
     <footer>
         <div class="container">
             <div class="footer">
-                <h4>Copy Right 2023 © By Harshad All Rights Reserved</h4>
+         
             </div>
         </div>
     </footer>
